# ldasoft

./: .gitignore  CMakeLists.txt  Doxyfile  GlobalFit.drawio  LICENSE  LISADataFlow.drawio  README.md  Untitled Diagram.drawio  build_conda.sh  environment.yml  gitversion.h.in  install.sh  mpi_run_conda.sh  sonar-project.properties
.github/workflows/: build.yaml  build.yml
FisherGalaxy/: README
FisherGalaxy/src/: Bright_Remove.c  Constants.h  Detector.h  Fisher_Galaxy.c  Fisher_Galaxy_MLDC.c  Full_Residual.c  Full_Residual_save.c  Galaxy.c  Subroutines.c  Subroutines.h  arrays.c
apps/etc/: run_amcvn.sh  run_globalfit.sh  run_noise.sh  run_spline.sh  run_ucb.sh  run_vgb.sh  test_suite.ipynb  test_suite.sh
apps/src/: CMakeLists.txt  fstat_test.c  gaussian_mixture_model.c  gb_catalog.c  gb_match.c  gb_mcmc.c  glass_noise_mcmc.c  glass_noise_spline_mcmc.c  glass_ucb_catalog.c  glass_ucb_chirpmass.c  glass_ucb_match.c  glass_ucb_mcmc.c  glass_vgb_mcmc.c  noise_mcmc.c  noise_spline_mcmc.c  ucb_catalog.c  ucb_chirpmass.c  ucb_grid.c  ucb_match.c  ucb_mcmc.c  ucb_reconstruction.c  ucb_waveform_benchmark.c  ucb_wavelet_mcmc.c  vb_mcmc.c  vgb_mcmc.c
data/src/: CMakeLists.txt  constants.h  data.c  data.h  gitversion.h  lisa.c  lisa.h
docs/: _config.yml
docs/html/: BayesLine_8h_source.html  Constants_8h.html  Constants_8h.js  Constants_8h_source.html  Detector_8h_source.html  GMM__with__EM_8h.html  GMM__with__EM_8h.js  GMM__with__EM_8h_source.html  GalacticBinaryCatalog_8h.html  GalacticBinaryCatalog_8h.js  GalacticBinaryCatalog_8h_source.html  GalacticBinaryData_8h.html  GalacticBinaryData_8h.js  GalacticBinaryData_8h_source.html  GalacticBinaryFStatistic_8h_source.html  GalacticBinaryIO_8h.html  GalacticBinaryIO_8h.js  GalacticBinaryIO_8h_source.html  GalacticBinaryMCMC_8c.html  GalacticBinaryMCMC_8c.js  GalacticBinaryMCMC_8h.html  GalacticBinaryMCMC_8h.js  GalacticBinaryMCMC_8h_source.html  GalacticBinaryMath_8h.html  GalacticBinaryMath_8h.js  (+377 more)
gbfisher/: README  README.md
gbfisher/src/: Bright_Remove.c  CMakeLists.txt  Catalogue  Catalogue.c  Confusion_Fit.c  Density.c  Fisher_Galaxy.c  Fisher_Galaxy_MLDC.c  Full_Residual.c  Full_Residual_save.c  Galaxy.c  Makefile  OrbitFile.c  Setup.c  Subroutines.c  Subroutines.h  arrays.c  arrays.h  reformat_output.c
gbmcmc/: README.md  README_LDC.md
gbmcmc/src/: BayesLine.c  BayesLine.h  CMakeLists.txt  Constants.h  GalacticBinary.h  GalacticBinaryCatalog.c  GalacticBinaryCatalog.h  GalacticBinaryData.c  GalacticBinaryData.h  GalacticBinaryFStatistic.c  GalacticBinaryFStatistic.h  GalacticBinaryIO.c  GalacticBinaryIO.h  GalacticBinaryMCMC.c  GalacticBinaryMCMC.h  GalacticBinaryMatch.c  GalacticBinaryMath.c  GalacticBinaryMath.h  GalacticBinaryModel.c  GalacticBinaryModel.h  GalacticBinaryPrior.c  GalacticBinaryPrior.h  GalacticBinaryProposal.c  GalacticBinaryProposal.h  GalacticBinaryResidual.c  GalacticBinaryWaveform.c  GalacticBinaryWaveform.h  LISA.c  LISA.h  Makefile  README.md  depricated_GalacticBinaryCatalog.c  gb_catalog.c  gb_mcmc.c  gb_mcmc_brans_dicke.c  gb_mcmc_chirpmass.c  gbmcmc.h  gitversion.h  vb_mcmc.c
globalfit/: CMakeLists.txt  README.md
globalfit/src/: CMakeLists.txt  GalacticBinaryWrapper.c  GalacticBinaryWrapper.h  GlobalFit.c  MBHWrapper.c  MBHWrapper.h  Makefile  NoiseWrapper.c  NoiseWrapper.h  VerificationBinaryWrapper.c  VerificationBinaryWrapper.h  glass_mbh_wrapper.c  glass_mbh_wrapper.h  glass_noise_wrapper.c  glass_noise_wrapper.h  glass_ucb_wrapper.c  glass_ucb_wrapper.h  glass_vgb_wrapper.c  glass_vgb_wrapper.h  globalfit.c  mbh_wrapper.c  mbh_wrapper.h  noise_wrapper.c  noise_wrapper.h  ucb_wrapper.c  vgb_wrapper.c  vgb_wrapper.h
lisa/src/: CMakeLists.txt  Constants.h  LISA.c  LISA.h
noise/: CMakeLists.txt
noise/src/: CMakeLists.txt  Noise.c  Noise.h  glass_noise.h  glass_noise_io.c  glass_noise_io.h  glass_noise_model.c  glass_noise_model.h  glass_noise_sampler.c  glass_noise_sampler.h  noise.h  noise_io.c  noise_io.h  noise_mcmc.c  noise_model.c  noise_model.h  noise_sampler.c  noise_sampler.h  noise_spline_mcmc.c
slurm/: hyak_globalfit_minimal.slurm  mpi_run_nasa_aws.sh
smbh/: README.md
src/: Constants.h  GalacticBinary.h  GalacticBinaryCatalog.c  GalacticBinaryData.c  GalacticBinaryData.h  GalacticBinaryIO.c  GalacticBinaryIO.h  GalacticBinaryMCMC.c  GalacticBinaryMath.c  GalacticBinaryMath.h  GalacticBinaryModel.c  GalacticBinaryModel.h  GalacticBinaryPrior.c  GalacticBinaryProposal.c  GalacticBinaryProposal.h  GalacticBinaryWaveform.c  GalacticBinaryWaveform.h  LISA.c  LISA.h  Makefile  gb_catalog  gb_fisher  gb_mcmc
tools/src/: CMakeLists.txt  GMM_with_EM.c  GMM_with_EM.h  Makefile  gaussian_mixture_model  gaussian_mixture_model.c  gmm.c  gmm.h
tools/src/gaussian_mixture_model.dSYM/Contents/: Info.plist
tools/src/gaussian_mixture_model.dSYM/Contents/Resources/DWARF/: gaussian_mixture_model
ucb/: README.md
ucb/src/: CMakeLists.txt  gb_catalog  gb_match  gb_mcmc  gb_mcmc_brans_dicke  gb_mcmc_brans_dicke.c  gb_mcmc_chirpmass  gb_mcmc_frequency_spacing  gb_mcmc_frequency_spacing.c  gb_mcmc_frequency_spacing_2.c  gb_residual  gb_sim  gitversion.h  glass_ucb.h  glass_ucb_catalog.c  glass_ucb_catalog.h  glass_ucb_data.c  glass_ucb_data.h  glass_ucb_fstatistic.c  glass_ucb_fstatistic.h  glass_ucb_io.c  glass_ucb_io.h  glass_ucb_model.c  glass_ucb_model.h  glass_ucb_prior.c  glass_ucb_prior.h  glass_ucb_proposal.c  glass_ucb_proposal.h  glass_ucb_residual.c  glass_ucb_sampler.c  glass_ucb_sampler.h  glass_ucb_waveform.c  glass_ucb_waveform.h  ucb.h  ucb_catalog.c  ucb_catalog.h  ucb_data.c  ucb_data.h  ucb_fstatistic.c  ucb_fstatistic.h  (+12 more)
util/src/: CMakeLists.txt  util.c  util.h
utils/: CMakeLists.txt
utils/src/: CMakeLists.txt  gitversion.h  glass_constants.h  glass_data.c  glass_data.h  glass_galaxy.c  glass_galaxy.h  glass_gmm.c  glass_gmm.h  glass_healpix.c  glass_healpix.h  glass_lisa.c  glass_lisa.h  glass_math.c  glass_math.h  glass_utils.c  glass_utils.h  glass_wavelet.c  glass_wavelet.h  pix2ang.c  pix2ang.h
utils/src/astrometry/: astrometry.c  astrometry.h
(+358 files in other folders)
