# add library
include_directories ("${PROJECT_SOURCE_DIR}/utils/src/")
include_directories ("${PROJECT_SOURCE_DIR}/ucb/src/")
include_directories ("${PROJECT_SOURCE_DIR}/noise/src/")
include_directories(SYSTEM ${GSL_INCLUDE_DIRS} ${HDF5_INCLUDE_DIRS})


add_executable(glass_gaussian_mixture_model glass_gaussian_mixture_model.c)
target_link_libraries(glass_gaussian_mixture_model m)
target_link_libraries(glass_gaussian_mixture_model ${GSL_LIBRARIES})
target_link_libraries(glass_gaussian_mixture_model glass_utils)
install(TARGETS glass_gaussian_mixture_model DESTINATION bin)

add_executable(glass_ucb_mcmc glass_ucb_mcmc.c)
target_link_libraries(glass_ucb_mcmc ${GSL_LIBRARIES})
target_link_libraries(glass_ucb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(glass_ucb_mcmc m)
target_link_libraries(glass_ucb_mcmc glass_utils)
target_link_libraries(glass_ucb_mcmc glass_ucb)
if(APPLE)
   target_link_libraries(glass_ucb_mcmc omp)
endif()
install(TARGETS glass_ucb_mcmc DESTINATION bin)

add_executable(glass_ucb_catalog glass_ucb_catalog.c)
target_link_libraries(glass_ucb_catalog ${GSL_LIBRARIES})
target_link_libraries(glass_ucb_catalog ${HDF5_LIBRARIES})
target_link_libraries(glass_ucb_catalog m)
target_link_libraries(glass_ucb_catalog glass_utils)
target_link_libraries(glass_ucb_catalog glass_ucb)
if(APPLE)
   target_link_libraries(glass_ucb_catalog omp)
endif()
install(TARGETS glass_ucb_catalog DESTINATION bin)

add_executable(glass_ucb_match glass_ucb_match.c)
target_link_libraries(glass_ucb_match ${GSL_LIBRARIES})
target_link_libraries(glass_ucb_match ${HDF5_LIBRARIES})
target_link_libraries(glass_ucb_match m)
target_link_libraries(glass_ucb_match glass_utils)
target_link_libraries(glass_ucb_match glass_ucb)
if(APPLE)
   target_link_libraries(glass_ucb_match omp)
endif()
install(TARGETS glass_ucb_match DESTINATION bin)

add_executable(glass_ucb_chirpmass glass_ucb_chirpmass.c)
target_link_libraries(glass_ucb_chirpmass ${GSL_LIBRARIES})
target_link_libraries(glass_ucb_chirpmass ${HDF5_LIBRARIES})
target_link_libraries(glass_ucb_chirpmass m)
target_link_libraries(glass_ucb_chirpmass glass_utils)
target_link_libraries(glass_ucb_chirpmass glass_ucb)
if(APPLE)
   target_link_libraries(glass_ucb_chirpmass omp)
endif()
install(TARGETS glass_ucb_chirpmass DESTINATION bin)

add_executable(glass_vgb_mcmc glass_vgb_mcmc.c)
                
target_link_libraries(glass_vgb_mcmc ${GSL_LIBRARIES})
target_link_libraries(glass_vgb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(glass_vgb_mcmc m)
target_link_libraries(glass_vgb_mcmc glass_utils)
if(APPLE)
   target_link_libraries(glass_vgb_mcmc omp)
endif()
target_link_libraries(glass_vgb_mcmc glass_ucb)
install(TARGETS glass_vgb_mcmc DESTINATION bin)

add_executable(glass_noise_mcmc glass_noise_mcmc.c)

target_link_libraries(glass_noise_mcmc ${GSL_LIBRARIES})
target_link_libraries(glass_noise_mcmc ${HDF5_LIBRARIES})
target_link_libraries(glass_noise_mcmc m)
target_link_libraries(glass_noise_mcmc glass_utils)
target_link_libraries(glass_noise_mcmc glass_noise)
if(APPLE)
   target_link_libraries(glass_noise_mcmc omp)
endif()
install(TARGETS glass_noise_mcmc DESTINATION bin)

add_executable(glass_noise_spline_mcmc glass_noise_spline_mcmc.c)

target_link_libraries(glass_noise_spline_mcmc ${GSL_LIBRARIES})
target_link_libraries(glass_noise_spline_mcmc ${HDF5_LIBRARIES})
target_link_libraries(glass_noise_spline_mcmc m)
target_link_libraries(glass_noise_spline_mcmc glass_utils)
target_link_libraries(glass_noise_spline_mcmc glass_noise)
if(APPLE)
   target_link_libraries(glass_noise_spline_mcmc omp)
endif()
install(TARGETS glass_noise_spline_mcmc DESTINATION bin)
