# add library
include_directories ("${PROJECT_SOURCE_DIR}/utils/src/")
include_directories ("${PROJECT_SOURCE_DIR}/ucb/src/")
include_directories ("${PROJECT_SOURCE_DIR}/noise/src/")
include_directories(SYSTEM ${GSL_INCLUDE_DIRS} ${HDF5_INCLUDE_DIRS})


add_executable(gaussian_mixture_model gaussian_mixture_model.c)
target_link_libraries(gaussian_mixture_model m)
target_link_libraries(gaussian_mixture_model ${GSL_LIBRARIES})
target_link_libraries(gaussian_mixture_model glass_utils)
install(TARGETS gaussian_mixture_model DESTINATION bin)

add_executable(ucb_mcmc ucb_mcmc.c)
target_link_libraries(ucb_mcmc ${GSL_LIBRARIES})
target_link_libraries(ucb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(ucb_mcmc m)
target_link_libraries(ucb_mcmc glass_utils)
target_link_libraries(ucb_mcmc glass_ucb)
if(APPLE)
   target_link_libraries(ucb_mcmc omp)
endif()
install(TARGETS ucb_mcmc DESTINATION bin)

add_executable(ucb_catalog ucb_catalog.c)
target_link_libraries(ucb_catalog ${GSL_LIBRARIES})
target_link_libraries(ucb_catalog ${HDF5_LIBRARIES})
target_link_libraries(ucb_catalog m)
target_link_libraries(ucb_catalog glass_utils)
target_link_libraries(ucb_catalog glass_ucb)
if(APPLE)
   target_link_libraries(ucb_catalog omp)
endif()
install(TARGETS ucb_catalog DESTINATION bin)

add_executable(ucb_match ucb_match.c)
target_link_libraries(ucb_match ${GSL_LIBRARIES})
target_link_libraries(ucb_match ${HDF5_LIBRARIES})
target_link_libraries(ucb_match m)
target_link_libraries(ucb_match glass_utils)
target_link_libraries(ucb_match glass_ucb)
if(APPLE)
   target_link_libraries(ucb_match omp)
endif()
install(TARGETS ucb_match DESTINATION bin)

add_executable(ucb_chirpmass ucb_chirpmass.c)
target_link_libraries(ucb_chirpmass ${GSL_LIBRARIES})
target_link_libraries(ucb_chirpmass ${HDF5_LIBRARIES})
target_link_libraries(ucb_chirpmass m)
target_link_libraries(ucb_chirpmass glass_utils)
target_link_libraries(ucb_chirpmass glass_ucb)
if(APPLE)
   target_link_libraries(ucb_chirpmass omp)
endif()
install(TARGETS ucb_chirpmass DESTINATION bin)

add_executable(vgb_mcmc vgb_mcmc.c)
target_link_libraries(vgb_mcmc ${GSL_LIBRARIES})
target_link_libraries(vgb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(vgb_mcmc m)
target_link_libraries(vgb_mcmc glass_utils)
if(APPLE)
   target_link_libraries(vgb_mcmc omp)
endif()
target_link_libraries(vgb_mcmc glass_ucb)
install(TARGETS vgb_mcmc DESTINATION bin)

add_executable(noise_mcmc noise_mcmc.c)
target_link_libraries(noise_mcmc ${GSL_LIBRARIES})
target_link_libraries(noise_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_mcmc m)
target_link_libraries(noise_mcmc glass_utils)
target_link_libraries(noise_mcmc glass_noise)
if(APPLE)
   target_link_libraries(noise_mcmc omp)
endif()
install(TARGETS noise_mcmc DESTINATION bin)

add_executable(noise_spline_mcmc noise_spline_mcmc.c)
target_link_libraries(noise_spline_mcmc ${GSL_LIBRARIES})
target_link_libraries(noise_spline_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_spline_mcmc m)
target_link_libraries(noise_spline_mcmc glass_utils)
target_link_libraries(noise_spline_mcmc glass_noise)
if(APPLE)
   target_link_libraries(noise_spline_mcmc omp)
endif()
install(TARGETS noise_spline_mcmc DESTINATION bin)
