# add library
include_directories ("${PROJECT_SOURCE_DIR}/utils/src/")
include_directories ("${PROJECT_SOURCE_DIR}/ucb/src/")
include_directories ("${PROJECT_SOURCE_DIR}/noise/src/")
include_directories(SYSTEM ${GSL_INCLUDE_DIRS} ${HDF5_INCLUDE_DIRS})


add_executable(gaussian_mixture_model gaussian_mixture_model.c)
target_link_libraries(gaussian_mixture_model glass_utils)
target_link_libraries(gaussian_mixture_model ${GSL_LIBRARIES})
target_link_libraries(gaussian_mixture_model m)
install(TARGETS gaussian_mixture_model DESTINATION bin)

add_executable(ucb_mcmc ucb_mcmc.c)
target_link_libraries(ucb_mcmc glass_ucb)
target_link_libraries(ucb_mcmc glass_noise)
target_link_libraries(ucb_mcmc glass_utils)
if(APPLE)
   target_link_libraries(ucb_mcmc omp)
endif()
target_link_libraries(ucb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(ucb_mcmc ${GSL_LIBRARIES})
target_link_libraries(ucb_mcmc m)
install(TARGETS ucb_mcmc DESTINATION bin)

add_executable(ucb_wavelet_mcmc ucb_wavelet_mcmc.c)
target_link_libraries(ucb_wavelet_mcmc glass_ucb)
target_link_libraries(ucb_wavelet_mcmc glass_noise)
target_link_libraries(ucb_wavelet_mcmc glass_utils)
if(APPLE)
   target_link_libraries(ucb_wavelet_mcmc omp)
endif()
target_link_libraries(ucb_wavelet_mcmc ${HDF5_LIBRARIES})
target_link_libraries(ucb_wavelet_mcmc ${GSL_LIBRARIES})
target_link_libraries(ucb_wavelet_mcmc m)
install(TARGETS ucb_wavelet_mcmc DESTINATION bin)

add_executable(fstat_test fstat_test.c)
target_link_libraries(fstat_test glass_ucb)
target_link_libraries(fstat_test glass_noise)
target_link_libraries(fstat_test glass_utils)
if(APPLE)
   target_link_libraries(fstat_test omp)
endif()
target_link_libraries(fstat_test ${HDF5_LIBRARIES})
target_link_libraries(fstat_test ${GSL_LIBRARIES})
target_link_libraries(fstat_test m)
install(TARGETS fstat_test DESTINATION bin)

add_executable(ucb_catalog ucb_catalog.c)
target_link_libraries(ucb_catalog glass_ucb)
target_link_libraries(ucb_catalog glass_noise)
target_link_libraries(ucb_catalog glass_utils)
if(APPLE)
   target_link_libraries(ucb_catalog omp)
endif()
target_link_libraries(ucb_catalog ${HDF5_LIBRARIES})
target_link_libraries(ucb_catalog ${GSL_LIBRARIES})
target_link_libraries(ucb_catalog m)
install(TARGETS ucb_catalog DESTINATION bin)

add_executable(ucb_match ucb_match.c)
target_link_libraries(ucb_match glass_ucb)
target_link_libraries(ucb_match glass_noise)
target_link_libraries(ucb_match glass_utils)
if(APPLE)
   target_link_libraries(ucb_match omp)
endif()
target_link_libraries(ucb_match ${HDF5_LIBRARIES})
target_link_libraries(ucb_match ${GSL_LIBRARIES})
target_link_libraries(ucb_match m)
install(TARGETS ucb_match DESTINATION bin)

add_executable(ucb_chirpmass ucb_chirpmass.c)
target_link_libraries(ucb_chirpmass glass_ucb)
target_link_libraries(ucb_chirpmass glass_noise)
target_link_libraries(ucb_chirpmass glass_utils)
if(APPLE)
   target_link_libraries(ucb_chirpmass omp)
endif()
target_link_libraries(ucb_chirpmass ${HDF5_LIBRARIES})
target_link_libraries(ucb_chirpmass ${GSL_LIBRARIES})
target_link_libraries(ucb_chirpmass m)
install(TARGETS ucb_chirpmass DESTINATION bin)

add_executable(vgb_mcmc vgb_mcmc.c)
target_link_libraries(vgb_mcmc glass_ucb)
target_link_libraries(vgb_mcmc glass_noise)
target_link_libraries(vgb_mcmc glass_utils)
if(APPLE)
   target_link_libraries(vgb_mcmc omp)
endif()
target_link_libraries(vgb_mcmc ${HDF5_LIBRARIES})
target_link_libraries(vgb_mcmc ${GSL_LIBRARIES})
target_link_libraries(vgb_mcmc m)
install(TARGETS vgb_mcmc DESTINATION bin)

add_executable(noise_mcmc noise_mcmc.c)
target_link_libraries(noise_mcmc glass_noise)
target_link_libraries(noise_mcmc glass_utils)
if(APPLE)
   target_link_libraries(noise_mcmc omp)
endif()
target_link_libraries(noise_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_mcmc ${GSL_LIBRARIES})
target_link_libraries(noise_mcmc m)
install(TARGETS noise_mcmc DESTINATION bin)

add_executable(noise_spline_mcmc noise_spline_mcmc.c)
target_link_libraries(noise_spline_mcmc glass_noise)
target_link_libraries(noise_spline_mcmc glass_utils)
if(APPLE)
   target_link_libraries(noise_spline_mcmc omp)
endif()
target_link_libraries(noise_spline_mcmc ${HDF5_LIBRARIES})
target_link_libraries(noise_spline_mcmc ${GSL_LIBRARIES})
target_link_libraries(noise_spline_mcmc m)
install(TARGETS noise_spline_mcmc DESTINATION bin)

add_executable(ucb_grid ucb_grid.c)
target_link_libraries(ucb_grid ${GSL_LIBRARIES})
target_link_libraries(ucb_grid m)
install(TARGETS ucb_grid DESTINATION bin)


